{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 12,
  "lineage": "37442ffb-5054-3344-9b69-560eaf03b3ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lamp_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f96c63e39f9144bc",
            "arn": "arn:aws:ec2:us-east-1:211125520094:instance/i-0537a92bf3b62d24d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0537a92bf3b62d24d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lamp_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0551424739cfc48c1",
            "private_dns": "ip-10-0-1-165.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.165",
            "public_dns": "ec2-44-197-195-65.compute-1.amazonaws.com",
            "public_ip": "44.197.195.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07f459f0f7d257d3c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e377a64de42849a",
            "tags": {
              "Environment": "dev",
              "Name": "Lamp stack"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Lamp stack"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c775c23a9bd768dc"
            ]
          },
          "dependencies": [
            "aws_key_pair.lamp_key",
            "aws_security_group.lamp-sg",
            "aws_subnet.lamp-subnet",
            "aws_vpc.lamp-vpc",
            "data.aws_ami.amazon_linux_2",
            "tls_private_key.lamp_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125520094:internet-gateway/igw-0f0213ed0265b77e6",
            "id": "igw-0f0213ed0265b77e6",
            "owner_id": "211125520094",
            "tags": {
              "Name": "Lamp IGW"
            },
            "tags_all": {
              "Name": "Lamp IGW"
            },
            "vpc_id": "vpc-02c98b238abd8c57f"
          },
          "dependencies": [
            "aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125520094:route-table/rtb-051e0ac3da0a37ed8",
            "id": "rtb-051e0ac3da0a37ed8",
            "owner_id": "211125520094",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0213ed0265b77e6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lamp WebRT"
            },
            "tags_all": {
              "Name": "lamp WebRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c98b238abd8c57f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0723c512de13bbb69",
            "route_table_id": "rtb-051e0ac3da0a37ed8",
            "subnet_id": "subnet-08e377a64de42849a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.web-rt",
            "aws_subnet.lamp-subnet",
            "aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lamp-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125520094:security-group/sg-0c775c23a9bd768dc",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c775c23a9bd768dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Lamp security group",
            "name_prefix": "",
            "owner_id": "211125520094",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Lamp-SG"
            },
            "tags_all": {
              "Name": "Lamp-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02c98b238abd8c57f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lamp-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125520094:subnet/subnet-08e377a64de42849a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e377a64de42849a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125520094",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lamp-subnet"
            },
            "tags_all": {
              "Name": "lamp-subnet"
            },
            "vpc_id": "vpc-02c98b238abd8c57f"
          },
          "dependencies": [
            "aws_vpc.lamp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lamp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125520094:vpc/vpc-02c98b238abd8c57f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074222f02531d6190",
            "default_route_table_id": "rtb-0625364156196a68c",
            "default_security_group_id": "sg-0c6bc90001c918f6d",
            "dhcp_options_id": "dopt-0c32fb2ec2c981fee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02c98b238abd8c57f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0625364156196a68c",
            "owner_id": "211125520094",
            "tags": {
              "Name": "Lamp VPC"
            },
            "tags_all": {
              "Name": "Lamp VPC"
            }
          }
        }
      ]
    }
  ]
}